--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Flamur Deliu",
+  "author": "Los Pibardos",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.0.0",
