--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.7.0",
     "axios": "^0.19.0",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.29.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
