--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^5.7.0",
-    "axios": "^0.19.0",
+    "axios": "^1.4.0",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.29.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
