--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^5.7.0",
     "axios": "^1.4.0",
+    "material-ui": "^0.20.2",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.29.4",
     "react": "^16.12.0",
