--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1"
   },
